--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ zstd = { version = "0.12.4", features = ["zstdmt"], optional =  true }
 workerpool = "1.2.0"
 statrs = "0.16.0"
 nalgebra = "0.32.3"
+rayon = "1.9.0"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
