--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ statrs = "0.16.0"
 nalgebra = "0.32.3"
 rayon = "1.9.0"
 log = "0.4.21"
+glob = "0.3.1"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
